syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.gamayun.proto";
option java_outer_classname = "GamayunResultReporter";
option objc_class_prefix = "GMY";

package gamayun;

// The result service definition.
service Result{
  // Reports a result to Gamayun
  rpc ReportResult (TaskResult) returns (EmptyResponse) {}
}

// Result containing jobName and Results
message TaskResult {
  string jobName = 1;
  repeated string results = 2;
}

// The empty response
message EmptyResponse {
}
